<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BookingActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="374dp"
        android:layout_height="173dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/logoDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <Button
        android:id="@+id/logoutButton"
        android:layout_width="84dp"
        android:layout_height="47dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:text="@string/logoutText"
        android:textColor="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/bookingButton"
        android:layout_width="84dp"
        android:layout_height="47dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:text="@string/bookingsText"

        android:textColor="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/profileBtn"
        android:layout_width="84dp"
        android:layout_height="47dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:text="@string/profileText"
        android:textColor="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/selectDate"
        android:layout_width="184dp"
        android:layout_height="116dp"
        android:layout_marginTop="36dp"
        android:background="#03A9F4"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal|center_vertical"
        android:importantForAutofill="no"
        android:inputType="none"
        android:focusable="false"
        android:text="@string/select_a_date_and_timeText"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>