<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="500dp"
        android:layout_height="249dp"
        android:layout_marginTop="36dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logoDescription" />

    <Button
        android:id="@+id/loginBTN"
        android:layout_width="220dp"
        android:layout_height="49dp"
        android:layout_marginBottom="164dp"
        android:background="#03A9F4"
        android:fontFamily="sans-serif-black"
        android:soundEffectsEnabled="true"
        android:text="@string/loginText"
        android:textColor="#FFFFFF"
        app:iconTint="#D52A2A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/forgotPasswordBtn"
        android:layout_width="220dp"
        android:layout_height="49dp"
        android:layout_marginBottom="104dp"
        android:background="#03A9F4"
        android:fontFamily="sans-serif-black"
        android:soundEffectsEnabled="true"
        android:text="@string/forgotPassword"
        android:textColor="#FFFFFF"
        app:iconTint="#D52A2A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/bookBtn"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:layout_marginBottom="48dp"
        android:background="#03A9F4"
        android:fontFamily="sans-serif-black"
        android:soundEffectsEnabled="true"
        android:text="@string/RegisterText"
        android:textColor="#FFFFFF"
        app:iconTint="#D52A2A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/enterEmailText"
        android:layout_width="281dp"
        android:layout_height="90dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/enterEmailText"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:soundEffectsEnabled="true"
        android:textAlignment="center"
        android:textColor="#03A9F4"
        android:textColorHint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/enterPasswordText"
        android:layout_width="281dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/EnterPasswordText"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:soundEffectsEnabled="true"
        android:textAlignment="center"
        android:textColor="#03A9F4"
        android:textColorHint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>