<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ForgotPasswordActivity">

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:layout_marginBottom="48dp"
        android:background="#03A9F4"
        android:fontFamily="sans-serif-black"
        android:soundEffectsEnabled="true"
        android:text="@string/resetButton"
        android:textColor="#FFFFFF"
        app:iconTint="#D52A2A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/resetTextview"
        android:layout_width="303dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/enterRegisteredEmail"
        android:textColor="#03A9F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo2"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="500dp"
        android:layout_height="249dp"
        android:layout_marginTop="36dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/logoDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/enterEmailtoReset"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/enterEmailText"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#03A9F4"
        android:textColorHint="#03A9F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetTextview"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="56dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:progressTint="#03A9F4"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEmailtoReset" />

</androidx.constraintlayout.widget.ConstraintLayout>